# ocaml-opentelemetry

./: .gitignore  .gitmodules  .ocamlformat  CHANGES.md  Makefile  README.md  dune  dune-project  emit1.sh  emit1_ocurl_lwt.sh  emit1_stdout.sh  flake.nix  index.html  index.md  opentelemetry-client-cohttp-eio.opam  opentelemetry-client-cohttp-lwt.opam  opentelemetry-client-ocurl-lwt.opam  opentelemetry-client-ocurl.opam  opentelemetry-client.opam  opentelemetry-cohttp-eio.opam  opentelemetry-cohttp-lwt.opam  opentelemetry-eio.opam  opentelemetry-logs.opam  opentelemetry-lwt.opam  opentelemetry.opam
src/: common_pb.ml  common_pb.mli  common_pp.ml  common_pp.mli  common_types.ml  common_types.mli  dune  logs_pb.ml  logs_pb.mli  logs_pp.ml  logs_pp.mli  logs_service_pb.ml  logs_service_pb.mli  logs_service_pp.ml  logs_service_pp.mli  logs_service_types.ml  logs_service_types.mli  logs_types.ml  logs_types.mli  metrics_pb.ml  metrics_pb.mli  metrics_pp.ml  metrics_pp.mli  metrics_service_pb.ml  metrics_service_pb.mli  metrics_service_pp.ml  metrics_service_pp.mli  metrics_service_types.ml  metrics_service_types.mli  metrics_types.ml  metrics_types.mli  opentelemetry.ml  rand_bytes.mli  resource_pb.ml  resource_pp.ml  resource_pp.mli  resource_types.ml  status_types.ml  thread_local.ml  thread_local.mli  (+17 more)
src/ambient-context/: basic_map.ml  default_.map.ml  default_.mli  default_.tls.ml  dls.ml.tmp  dune  opentelemetry_ambient_context.ml  opentelemetry_ambient_context.mli
src/ambient-context/core/: context.ml  dune  storage.ml
src/ambient-context/eio/: ambient_context_eio.ml  dune  dune.tmp  opentelemetry_ambient_context_eio.ml
src/ambient-context/lwt/: ambient_context_lwt.ml  dune  dune.tmp  opentelemetry_ambient_context_lwt.ml
src/ambient-context/picos/: dune  opentelemetry_ambient_context_picos.ml
src/ambient-context/tls/: dune  opentelemetry_ambient_context_tls.ml
src/ambient-context/types/: dune  opentelemetry_ambient_context_types.mli
src/atomic/: atomic.post412.mli  atomic.pre412.mli  dune  gen.ml
src/client/: AList.ml  AList.mli  FQueue.ml  FQueue.mli  any_resource.ml  batch.ml  batch.mli  bounded_queue.ml  bounded_queue_sync.ml  bounded_queue_sync.mli  client.ml  client_config.ml  client_config.mli  common_.ml  config.ml  config.mli  consumer.ml  debug_exporter.ml  dune  emitter_combine.ml  export_error.ml  exporter_add_batching.ml  exporter_combine.ml  exporter_debug.ml  exporter_queued.ml  exporter_stdout.ml  gc_metrics_sampling.ml  gc_metrics_sampling.mli  gen_ids.ml  generic_consumer.ml  generic_consumer_exporter.ml  generic_http_consumer.ml  generic_io.ml  generic_notifier.ml  interval_limiter.ml  io_sync.ml  io_sync.mli  notifier_sync.ml  notifier_sync.mli  opentelemetry_client_ocurl.ml  (+20 more)
src/client-cohttp-eio/: config.ml  dune  opentelemetry_client_cohttp_eio.ml  opentelemetry_client_cohttp_eio.mli
src/client-cohttp-lwt/: common_.ml  config.ml  config.mli  dune  opentelemetry_client_cohttp_lwt.ml  opentelemetry_client_cohttp_lwt.mli
src/client-ocurl/: b_queue.ml  b_queue.mli  batch.ml  common_.ml  config.ml  config.mli  dune  opentelemetry_client_ocurl.ml  opentelemetry_client_ocurl.mli
src/client-ocurl-lwt/: config.ml  config.mli  dune  opentelemetry_client_ocurl_lwt.ml  opentelemetry_client_ocurl_lwt.mli
src/client/lwt/: common_.ml  dune  io_lwt.ml  io_lwt.mli  notifier.ml  notifier_lwt.ml  notifier_lwt.mli  util_ticker.ml
src/core/: AList.ml  AList.mli  any_signal.ml  any_signal_l.ml  common_.ml  context.ml  dune  event.ml  event.mli  exporter.ml  gc_metrics.ml  gc_metrics.mli  globals.ml  key_value.ml  lock.ml  lock.mli  log_record.ml  logger.ml  metrics.ml  metrics_callbacks.ml  metrics_callbacks.mli  opentelemetry.ml  rand_bytes.ml  rand_bytes.mli  scope.ml  scope.mli  span.ml  span.mli  span_ctx.ml  span_ctx.mli  span_id.ml  span_id.mli  span_kind.ml  span_link.ml  span_link.mli  span_status.ml  span_status.mli  tick_callbacks.ml  tick_callbacks.mli  timestamp_ns.ml  (+7 more)
src/domain/: dune  gen.ml  opentelemetry_domain.mli
src/emitter/: dune  emitter.ml  to_list.ml
src/integrations/cohttp/: README.md  dune  opentelemetry_cohttp_lwt.ml
src/integrations/logs/: dune  opentelemetry_logs.ml  (+1 more)
src/lib/: ambient_span.ml  ambient_span.mli  conventions.ml  dune  gc_metrics.ml  globals.ml  interval_limiter.mli  logger.ml  main_exporter.ml  metrics_callbacks.ml  metrics_callbacks.mli  metrics_emitter.ml  opentelemetry.ml  tracer.ml
src/lwt/: dune  opentelemetry_lwt.ml
src/proto/: common.ml  common.mli  common_pb.ml  common_pb.mli  common_pp.ml  common_pp.mli  common_types.ml  common_types.mli  dune  logs.ml  logs.mli  logs_pp.ml  logs_pp.mli  logs_service.ml  logs_service.mli  logs_service_pb.ml  logs_service_pp.ml  logs_service_pp.mli  logs_service_types.ml  logs_service_types.mli  logs_types.mli  metrics.ml  metrics.mli  metrics_pb.ml  metrics_pb.mli  metrics_pp.ml  metrics_pp.mli  metrics_service.ml  metrics_service.mli  metrics_service_pb.ml  metrics_service_pp.ml  metrics_service_pp.mli  metrics_service_types.ml  metrics_service_types.mli  metrics_types.ml  metrics_types.mli  resource.ml  resource.mli  resource_pb.mli  resource_pp.mli  (+20 more)
src/trace/: common_.ml  conv.ml  ctbl_.basic.ml  ctbl_.mli  ctbl_.picos.ml  dune  opentelemetry_trace.ml  opentelemetry_trace.mli  subscriber.ml
src/util/: alist.ml  aswitch.ml  aswitch.mli  cb_set.ml  cb_set.mli  dune  interval_limiter.mli  util_atomic.ml  util_bytes_.ml
tests/client_e2e/: clients_e2e_lib.ml  cohttp_lwt_1_job_1_batch_1_iter.expected  cohttp_lwt_1_job_1_batch_1_iter.ml  cohttp_lwt_1_job_2_batch_1_iter.expected  cohttp_lwt_1_job_2_batch_1_iter.ml  cohttp_lwt_3_job.expected  cohttp_lwt_3_job.ml  collect_program_traces.ml  collect_signals.ml  dune  gather_signals.ml  ocurl_1_job_2_batch_1_iter.expected  ocurl_3_job_1_iter.expected  signal_collector.ml  signal_gatherer.ml  signal_gatherer.mli  signal_reporter_server.ml  test_client_e2e_lwt.ml  test_cottp_eio_client_e2e.ml  test_cottp_lwt_client_e2e.ml  test_server_lib.ml
tests/logs/: dune  test_logs_e2e.expected  test_logs_e2e.ml
(+783 files in other folders)
