(library
 (name opentelemetry_ambient_context)
 (public_name opentelemetry.ambient-context)
 (synopsis
  "Abstraction over thread-local storage and fiber-local storage mechanisms")
 (private_modules hmap_key_)
 (libraries thread-local-storage threads atomic
  opentelemetry.ambient-context.types
  (select hmap_key_.ml from
          (rcontext hmap -> hmap_key_.rcontext.ml)
          (-> hmap_key_.new.ml))))
