(library
 (name opentelemetry_ambient_context)
 (public_name opentelemetry.ambient-context)
 (synopsis
  "Abstraction over thread-local storage and fiber-local storage mechanisms")
 (flags
  :standard
  -open
  Opentelemetry_ambient_context_core
  -open
  Opentelemetry_atomic)
 (libraries
  hmap
  opentelemetry.ambient-context.core
  opentelemetry.atomic
  (select
   default_.ml
   from
   (opentelemetry.ambient-context.tls -> default_.tls.ml)
   (-> default_.map.ml))))
