(library
 (name opentelemetry_client_cohttp_eio)
 (public_name opentelemetry-client-cohttp-eio)
 (synopsis "Opentelemetry collector using cohttp+eio+unix")
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (libraries
  opentelemetry
  opentelemetry.client
  eio
  cohttp
  cohttp-eio
  eio_main
  uri
  pbrt
  mtime
  mtime.clock.os
  tls-eio
  ca-certs
  mirage-crypto-rng.unix))
