(library
 (name opentelemetry_client_cohttp_lwt)
 (public_name opentelemetry-client-cohttp-lwt)
 (synopsis "Opentelemetry collector using cohttp+lwt+unix")
 (preprocess
  (pps lwt_ppx))
 (libraries
  opentelemetry
  opentelemetry.client
  lwt
  cohttp-lwt
  cohttp-lwt-unix
  pbrt
  mtime
  mtime.clock.os))
