(library
 (name opentelemetry_client)
 (public_name opentelemetry.client)
 (flags :standard -open Opentelemetry_util)
 (libraries
  opentelemetry
  opentelemetry.util
  opentelemetry.emitter
  opentelemetry.proto
  pbrt
  mtime
  mtime.clock.os)
 (synopsis
  "Basic exporters, as well as Common types and logic shared between exporters"))
