(library
 (name opentelemetry_client)
 (public_name opentelemetry-client)
 (flags :standard -open Opentelemetry_util)
 (libraries
  opentelemetry
  opentelemetry.util
  opentelemetry.emitter
  opentelemetry.proto
  opentelemetry.domain
  pbrt
  threads.posix
  mtime
  mtime.clock.os)
 (synopsis
  "Basic exporters, as well as common types and logic shared between exporters"))
