(library
 (name opentelemetry)
 (synopsis "API for opentelemetry instrumentation")
 (flags :standard -warn-error -a+8)
 (libraries
  opentelemetry.proto
  opentelemetry.ambient-context
  opentelemetry.atomic
  opentelemetry.domain
  ptime
  ptime.clock.os
  pbrt
  threads
  hmap)
 (public_name opentelemetry))
