(library
 (name opentelemetry_core)
 (public_name opentelemetry.core)
 (synopsis "Core types and definitions for opentelemetry")
 (flags :standard -warn-error -a+8 -open Opentelemetry_util)
 (libraries
  opentelemetry.proto
  opentelemetry.util
  opentelemetry.atomic
  opentelemetry.emitter
  ptime
  ptime.clock.os
  pbrt
  threads
  hmap))
