(library
 (name opentelemetry_trace)
 (public_name opentelemetry.trace)
 (synopsis "Use opentelemetry as a collector for trace")
 (optional)
 (libraries
  opentelemetry.ambient-context
  trace.core
  opentelemetry
  (select
   ctbl_.ml
   from
   (picos_aux.htbl -> ctbl_.picos.ml)
   (-> ctbl_.basic.ml))))
