(library
 (name opentelemetry_trace)
 (public_name opentelemetry.trace)
 (synopsis "Use opentelemetry as a collector for trace")
 (optional) ; trace
 (flags :standard -open Opentelemetry_util -open Opentelemetry_atomic)
 (libraries
  opentelemetry.ambient-context
  opentelemetry.util
  opentelemetry.atomic
  opentelemetry
  trace.core
  trace.subscriber))
