(env
 (_
  ; Make the binaries for the test emitters available on the path for the components defined in this dir.
  ; See https://dune.readthedocs.io/en/stable/reference/dune/env.html
  (binaries
   (../bin/emit1.exe as emit1)
   (../bin/emit1_cohttp.exe as emit1_cohttp))))

(tests
 (names test_client_e2e_lwt)
 (package opentelemetry-client-cohttp-lwt)
 (modules test_client_e2e_lwt)
 (deps %{bin:emit1_cohttp})
 (libraries
  signal_collector
  alcotest
  opentelemetry
  opentelemetry.client
  opentelemetry-client-cohttp-lwt))

(library
 (name signal_collector)
 (modules signal_collector)
 (libraries
  str
  alcotest
  cohttp-eio
  eio_main
  eio.unix
  fmt
  unix
  logs.fmt
  logs.threaded
  opentelemetry.client))

;  The following are expect tests, which use the signal_collector.ml to run signal emitting

(tests
 (names cohttp_lwt_1_job_1_batch_1_iter)
 (modules cohttp_lwt_1_job_1_batch_1_iter)
 (libraries signal_collector)
 (enabled_if false) ; FIXME: Deadlocks when run with 1 batch
 (deps %{bin:emit1_cohttp}))

(tests
 (names cohttp_lwt_1_job_2_batch_1_iter cohttp_lwt_3_job)
 (modules cohttp_lwt_1_job_2_batch_1_iter cohttp_lwt_3_job)
 (libraries signal_collector)
 (deps %{bin:emit1_cohttp}))
